--- a/MyStore.Web/Views/Web.config
+++ b/MyStore.Web/Views/Web.config
@@ -18,6 +18,8 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="MyStore.Web" />
+        
+        <add namespace="MyStore.Web.Models"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
