--- a/MyStore.Web/MyStore.Web.csproj
+++ b/MyStore.Web/MyStore.Web.csproj
@@ -54,6 +54,26 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.Mvc.4.0.1\lib\net45\Microsoft.Practices.Unity.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -106,6 +126,10 @@
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="WebActivatorEx, Version=2.0.0.0, Culture=neutral, PublicKeyToken=7b26dc2a43f6a0d4, processorArchitecture=MSIL">
+      <HintPath>..\packages\WebActivatorEx.2.0\lib\net40\WebActivatorEx.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
       <HintPath>..\packages\WebGrease.1.5.2\lib\WebGrease.dll</HintPath>
@@ -125,6 +149,8 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="App_Start\UnityConfig.cs" />
+    <Compile Include="App_Start\UnityMvcActivator.cs" />
     <Compile Include="Common\AjaxOnlyAttribute.cs" />
     <Compile Include="Common\BaseEntityController.cs" />
     <Compile Include="Common\BaseViewModel.cs" />
@@ -193,9 +219,21 @@
       <Project>{880bea0c-9e83-45cd-a9ee-73331ba147fb}</Project>
       <Name>Common.BL</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Common.Repository\Common.Repository.csproj">
+      <Project>{E577D42F-33DD-4186-A96E-EEE5021A2DED}</Project>
+      <Name>Common.Repository</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MyStore.BL\MyStore.BL.csproj">
+      <Project>{1d7246d9-6f30-4f28-be15-4ac9c78d9c97}</Project>
+      <Name>MyStore.BL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MyStore.Core\MyStore.Core.csproj">
       <Project>{8e63f6c6-a4db-485e-9114-47c5d60d9144}</Project>
       <Name>MyStore.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MyStore.Repository\MyStore.Repository.csproj">
+      <Project>{60052cb2-f585-40f3-adb1-5f047e29df93}</Project>
+      <Name>MyStore.Repository</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
