--- a/MyStore.Web/Web.config
+++ b/MyStore.Web/Web.config
@@ -8,9 +8,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MyStore.Web-20160221041521.mdf;Initial Catalog=aspnet-MyStore.Web-20160221041521;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MyStoreConnection" connectionString="Data Source=localhost;Initial Catalog=MyStore;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -26,13 +28,17 @@
       </system.Web>
   -->
   <system.web>
-    <authentication mode="None" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" />
+    </authentication>
+    
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
+      <add name="FormsAuthentication" type="System.Web.Security.FormsAuthenticationModule" />
     </modules>
   </system.webServer>
   <runtime>
