--- a/MyStore.Web/MyStore.Web.csproj
+++ b/MyStore.Web/MyStore.Web.csproj
@@ -303,7 +303,8 @@
     <Content Include="Scripts\kendo\2014.2.716\kendo.core.min.js.map" />
     <Content Include="Views\Client\_Grid.cshtml" />
     <Content Include="Views\Client\_Form.cshtml" />
-    <Content Include="Views\Order\Index.cshtml" />
+    <Content Include="Views\Order\_Grid.cshtml" />
+    <Content Include="Views\Order\_Form.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
