--- a/MyStore.BL/MyStore.BL.csproj
+++ b/MyStore.BL/MyStore.BL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="MyStoreConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ClientService.cs" />
+    <Compile Include="Services\OrderItemService.cs" />
     <Compile Include="Services\OrderService.cs" />
     <Compile Include="Services\ProductService.cs" />
     <Compile Include="Services\UserService.cs" />
