--- a/MyStore.Web/MyStore.Web.csproj
+++ b/MyStore.Web/MyStore.Web.csproj
@@ -307,10 +307,10 @@
     <Content Include="Views\Client\_Form.cshtml" />
     <Content Include="Views\Order\_Grid.cshtml" />
     <Content Include="Views\Order\_Form.cshtml" />
+    <Content Include="Views\OrderItem\_Form.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\OrderItem\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
