--- a/MyStore.BL/MyStore.BL.csproj
+++ b/MyStore.BL/MyStore.BL.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="MyStoreConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\BasketItemService.cs" />
     <Compile Include="Services\ClientService.cs" />
     <Compile Include="Services\OrderItemService.cs" />
     <Compile Include="Services\OrderService.cs" />
